# anonymize-mcp

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  release.yml
demo-zoom-hladka/: demo-report.html
docs/: COVERAGE.md  JOURNAL-2026-05-20.md  JOURNAL-2026-05-23.md  JOURNAL.md
docs/journal/: 2026-05-14.md  2026-05-15.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  README.md
src/anonymize_mcp/: __init__.py  http.py  korektor.py  langdetect.py  local_backend.py  maskit.py  maskit_audit.py  maskit_constants.py  maskit_parsing.py  maskit_patterns.py  maskit_placeholders.py  maskit_postprocess.py  maskit_stoplist.py  nametag.py  ponk.py  server.py  translator.py  validation.py
src/ufal_mcp/: __init__.py  korektor.py  langdetect.py  maskit.py  maskit_constants.py  maskit_patterns.py  maskit_placeholders.py  maskit_postprocess.py  maskit_strict.py  server.py
src/wrapper_mcp/: __init__.py  http.py  langdetect.py  maskit.py  maskit_audit.py  maskit_constants.py  maskit_normalize.py  maskit_patterns.py  maskit_postprocess.py  maskit_strict.py  nametag.py  server.py  udpipe.py
tests/: conftest.py  test_edge_cases.py  test_langdetect.py  test_local_backend.py  test_misc_pii.py  test_multilingual_leaks.py  test_nametag.py  test_postprocess.py  test_real_world_legal.py  test_sector_leaks.py  test_v0102_overredaction.py  test_v0727_fixes.py  test_v0728_fixes.py  test_v0729_fixes.py  test_v0730_features.py  test_v0731_currency.py  test_vin.py
