[project]
name = "anonymize-mcp"
version = "0.9.1"
description = "MCP server wrapping LINDAT NLP tools — production-grade anonymization, multilingual NER (33+ languages), UDPipe (961 models), Charles Translator (8 languages), PONK readability, Korektor spellcheck. Non-commercial use only."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Michal Bürgermeister", email = "michalbugy12@gmail.com" }]
license = { text = "MIT" }
keywords = [
    "mcp", "model-context-protocol", "claude", "anthropic",
    "czech", "nlp", "ner", "anonymization", "legal-tech",
    "nametag", "udpipe", "maskit", "ponk", "lindat",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Czech",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "anyio>=4",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest-cov>=5",
]

[project.urls]
Homepage = "https://github.com/Buggy1111/anonymize-mcp"
Repository = "https://github.com/Buggy1111/anonymize-mcp"
Issues = "https://github.com/Buggy1111/anonymize-mcp/issues"
"LINDAT" = "https://lindat.mff.cuni.cz/"

[project.scripts]
anonymize-mcp = "anonymize_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anonymize_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
# Only collect the real test suite. tests/legacy/ holds manual end-to-end
# scripts (live ÚFAL API + local file paths, run by hand), and dev/ holds
# old stress-test runners — neither belongs in automated collection.
testpaths = ["tests"]
addopts = "--ignore=tests/legacy"
markers = [
    "network: test calls the live LINDAT/ÚFAL API — skipped in CI (run locally with network via `pytest`)",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Default rules (E4/E7/E9, F) + isort. E741 ignored — single-letter `l` in
# comprehensions over leak/label lists is idiomatic here and not worth renaming.
extend-select = ["I"]
ignore = ["E741"]

[tool.mypy]
python_version = "3.10"
files = ["src/anonymize_mcp"]
strict = true

[tool.coverage.run]
source = ["anonymize_mcp"]
branch = false
